--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
               <a class="nav-link" href="./bootstrap/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./bootstrap/ContactUs.html"> Contact Us</a>
+              <a class="nav-link" href="./bootstrap/ContactUs.html">
+                Contact Us</a
+              >
             </li>
           </ul>
           <a
